- Implemented shortest path through maze using BFS. - Unit tests to cover many cases but not all yet.

--- a/MazeNavigate/MazeNavigate/MazeNavigate.csproj
+++ b/MazeNavigate/MazeNavigate/MazeNavigate.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IMazePathFinder.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="MazePathFinder.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
